訂單查詢頁面更新

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -66,6 +66,11 @@ button {
   justify-content: center;
 }
 
+.aliSta {
+  display: flex;
+  align-items: start;
+}
+
 .pTwo {
   text-indent: 2.5rem;
 }
