訂單管理錯誤修正

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,7 @@ a {
   text-decoration: none;
 }
 
-h1 {
+/* h1 {
   font-size: 50px;
   line-height: 64px;
   color: #222;
@@ -38,7 +38,7 @@ p {
   font-size: 16px;
   color: #222;
   margin: 15px 0 20px 0;
-}
+} */
 
 html {
   background-color: #daa520;
