--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,34 +12,6 @@ a {
   text-decoration: none;
 }
 
-/* h1 {
-  font-size: 50px;
-  line-height: 64px;
-  color: #222;
-}
-
-h2 {
-  font-size: 50px;
-  line-height: 64px;
-  color: #222;
-}
-
-h4 {
-  font-size: 20px;
-  color: #222;
-}
-
-h6 {
-  font-weight: 700;
-  font-size: 12px;
-}
-
-p {
-  font-size: 16px;
-  color: #222;
-  margin: 15px 0 20px 0;
-} */
-
 html {
   background-color: #daa520;
 }
@@ -47,14 +19,6 @@ html {
 ul {
   list-style: none;
 }
-/* input,
-textarea {
-  font-size: 1rem;
-  border: 1px solid #e8e8e8;
-  border-radius: 4px;
-  padding: 0.5rem 1rem;
-  outline: none;
-} */
 
 button {
   cursor: pointer;
@@ -69,6 +33,10 @@ button {
 .aliSta {
   display: flex;
   align-items: start;
+}
+
+.dis {
+  display: flex;
 }
 
 .pTwo {
