購物車頁面更新

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,7 +1,9 @@
 // 1.
 
 $yellowColor: #daa520;
-$darkYellowColor: #8d6500;
+$darkYellowColor: #b18d30;
+$grayColor: #c4c4c4;
+$darkGrayColor: #565656;
 
 $xtxColor: #27ba9b;
 $helpColor: #e26237;
