導航頁面更新

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -4,6 +4,10 @@ $yellowColor: #daa520;
 $darkYellowColor: #b18d30;
 $grayColor: #c4c4c4;
 $darkGrayColor: #565656;
+$middleGrayColor: #565656;
+$whiteColor: #fff4f4;
+$hoverGreenColor: #00a613;
+$activeGreenColor: #00b700;
 
 $xtxColor: #27ba9b;
 $helpColor: #e26237;
